--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+			  <%= link_to "DemoBook", statuses_path, class:"brand" %>
+				<ul class="nav">
+					<li><%= link_to "All Statuses", statuses_path %> </li>
 
-<%= yield %>
+				</ul>	
+
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
