--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -4,7 +4,7 @@
 <%= link_to "Post a New status", new_status_path, class:"btn btn-success" %>
 <% @statuses.each do |status| %>
 	<div class="status">
-		<strong><%= status.name %></strong>	
+		<strong><%= status.user.full_name %></strong>	
 		<p><%= status.content %></p>
 
 		<div class="meta">
